<resources>
    <string name="app_name">MyBill</string>
    <string name="expenditure">Expenditure</string>
    <string name="income">Income</string>
    <string name="balance">Balance</string>
    <string name="nav_header_title">Account</string>
    <string name="nav_header_subtitle">Click to login.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tab_text_1">Detail</string>
    <string name="tab_text_2">Chart</string>
    <string name="tab_text_3">Expense</string>
    <string name="tab_text_4">Income</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="utility">Utility</string>
    <string name="entertainment">Entertainment</string>
    <string name="gas">Gas</string>
    <string name="hamburger">Hamburger</string>
    <string name="cash">Cash</string>
    <string name="phone">phone</string>
    <string name="medicine">Medicine</string>
    <string name="rent">Rent</string>
    <string name="shopping">Shopping</string>
    <string name="study">Study</string>
    <string name="others">Others</string>
    <string name="salary">Salary</string>
    <string name="bank_interest">Bank Interest</string>
    <string name="bonus">Bonus</string>
    <string name="investment">Investment</string>
    <string name="tax_return">Tax Return</string>
    <string name="e_transfer">E-Transfer</string>
    <string name="refund">Refund</string>
    <string name="gift">Gift</string>
    <string name="family_support">Family Support</string>
    <string name="avatar">Avatar</string>
    <string name="username">Username</string>
    <string name="username_hint">Enter your new Username here</string>
    <string name="email">Email</string>
    <string name="email_hint">Enter your new email here</string>
    <string name="foodr">Foodr</string>
    <string name="food">Food</string>
    <string name="phone1">Phone</string>
</resources>