<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ExpenseIconFragment"
    android:orientation="vertical"
    >

    <!-- Line 1 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <!-- Line 1, item 1 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_utility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icons8_electricity_50"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/utility" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="1dp"
                android:text="@string/utility"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Line 1, item 2 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_entertain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icons8_film_reel_50"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/entertainment" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="1dp"
                android:text="@string/entertainment"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Line 1, item 3 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_gas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icons8_gas_50"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/gas" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="1dp"
                android:text="@string/gas"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Line 1, item 4 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_hamburger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icons8_hamburger_50"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/hamburger" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="1dp"
                android:text="@string/food"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />
        </LinearLayout>



    </LinearLayout>

    <!-- Line 2 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        >

        <!-- Line 2, item 1 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icons8_money_50"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/cash" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="1dp"
                android:text="@string/cash"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Line 2, item 2 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icons8_phone_50"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/cash" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="1dp"
                android:text="@string/phone1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Line 2, item 3 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_medicine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icons8_pills_50"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/medicine" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="1dp"
                android:text="@string/medicine"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />
        </LinearLayout>
        <!-- Line 2, item 4 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_rent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icons8_rent_50"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/rent" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="1dp"
                android:text="@string/rent"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>


    <!-- Line 3 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        >

        <!-- Line 3, item 1 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_shopping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icons8_shopping_50"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/shopping" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="1dp"
                android:text="@string/shopping"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Line 3, item 2 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_study"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icons8_study_50"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/study" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="1dp"
                android:text="@string/study"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Line 3, item 3 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_others"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icons8_others_50"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/others" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="1dp"
                android:text="@string/others"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Line 3, item 4 -->
        <!-- Place Holder -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
        </LinearLayout>


    </LinearLayout>





</LinearLayout>