<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ExpenseIconFragment"
    android:orientation="vertical"
    >

    <!-- Line 1 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <!-- Line 1, item 1 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_salary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icons8_salary_50"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/salary" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="1dp"
                android:text="@string/salary"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="10sp" />
        </LinearLayout>

        <!-- Line 1, item 2 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_bank_interest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icons8_bank_50"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/bank_interest" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="1dp"
                android:text="@string/bank_interest"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="10sp" />
        </LinearLayout>

        <!-- Line 1, item 3 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bonus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/bonus"
                android:src="@mipmap/icons8_bonus_50" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="1dp"
                android:text="@string/bonus"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="10sp" />
        </LinearLayout>

        <!-- Line 1, item 4 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_investment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icons8_investment_50"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/investment" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="1dp"
                android:text="@string/investment"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="10sp" />
        </LinearLayout>



    </LinearLayout>

    <!-- Line 2 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        >

        <!-- Line 2, item 1 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_tax_return"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icons8_tax_return_50"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/tax_return" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="1dp"
                android:text="@string/tax_return"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="10sp" />
        </LinearLayout>

        <!-- Line 2, item 2 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_transfer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icons8_etransfer_50"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/e_transfer" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="1dp"
                android:text="@string/e_transfer"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="10sp" />
        </LinearLayout>

        <!-- Line 2, item 3 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_refund"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icons8_refund_50"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/refund" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="1dp"
                android:text="@string/refund"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="10sp" />
        </LinearLayout>
        <!-- Line 2, item 4 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_gift"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icons8_gift_50"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/gift" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="1dp"
                android:text="@string/gift"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>


    <!-- Line 3 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        >

        <!-- Line 3, item 1 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_family"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icons8_family_50"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/family_support" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="1dp"
                android:text="@string/family_support"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="10sp" />
        </LinearLayout>


        <!-- Line 3, item 2 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_others"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icons8_others_50"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/others" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="1dp"
                android:text="@string/others"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="10sp" />
        </LinearLayout>

        <!-- Line 3, item 3 -->
        <!-- Place Holder -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
        </LinearLayout>


        <!-- Line 3, item 4 -->
        <!-- Place Holder -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
        </LinearLayout>


    </LinearLayout>





</LinearLayout>