<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:background="?attr/colorPrimary"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/expenditure"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/t_expend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:singleLine="true"
            android:text="0.00"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1.5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="13sp"
            android:singleLine="true"/>
        <TextView
            android:id="@+id/t_income"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.00"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:singleLine="true"/>

    </LinearLayout>

    <View android:layout_width="1dp"
        android:layout_height="41dp"
        android:background="#DCDCDC">
    </View>

    <LinearLayout
        android:layout_weight="1.5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:singleLine="true"/>
        <TextView
            android:id="@+id/t_balance"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.00"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:singleLine="true"/>

    </LinearLayout>

</LinearLayout>

